plugins {
    id 'java-library'
    id 'maven-publish'
}

apply from: "../common.gradle"

group 'com.maxsavteam.ciconia'
version libVersion

repositories {
    mavenCentral()
    mstRepo()
}

jar {
    manifest {
        attributes(
                "Automatic-Module-Name": "com.maxsavteam.ciconia"
        )
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    implementation 'org.reflections:reflections:0.10.2'

    implementation 'com.maxsavteam.graph:graph:0.2.0'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'

    // https://mvnrepository.com/artifact/org.json/json
    api 'org.json:json:20220320'

}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
}

mstPublishing('ciconia')